# module/referral/model/referral.model.go
@@ -1,0 +1,22 @@
+package referral_model
+
+import (
+	"go.mongodb.org/mongo-driver/v2/bson"
+)
+
+type PaymentOrder struct {
+	ID          bson.ObjectID `bson:"_id"`
+	AuthorID    int           `bson:"author_id"`
+	ReferrerID  int           `bson:"referrer_id"`
+	ReferralID  int           `bson:"referral_id"`
+	TotalAmount float64       `bson:"total_amount"`
+	TicketCount int           `bson:"ticket_count"`
+	CreatedAt   int64         `bson:"created_at"`
+	Levels      []Level       `bson:"levels"`
+}
+
+type Level struct {
+	LevelNumber int     `bson:"level_number"`
+	Rate        float64 `bson:"rate"`
+	Amount      float64 `bson:"amount"`
+}
